# rust-crypto-stuff

./: Cargo.toml
src/: main.rs  sha256.rs
