[package]
name = "rust_crypto"
version = "0.1.0"
authors = ["Caleb Sharp <caleb.sharp@twostoryrobot.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
base64 = "0.12.1"
byteorder = "1.3.4"
hex = "0.4.2"
